# ScaViSLAM_ros

./: .gitignore  cmake_opencv_installation_instructions.txt
cv_bridge/: CMakeLists.txt  manifest.xml
g2o_ScaVI/: Makefile  manifest.xml
g2o_ScaVI/g2o_src/: CMakeLists.txt
g2o_ScaVI/g2o_src/g2o/apps/g2o_viewer/: CMakeLists.txt  g2o_viewer.cpp
g2o_ScaVI/g2o_src/g2o/core/: factory.h  hyper_graph_action.cpp
pangolin/: Makefile  manifest.xml
pangolin/pangolin_src/: CMakeLists.txt
scavislam_lib/: CMakeLists.txt  mainpage.dox  manifest.xml
scavislam_lib/src/: placerecognizer.cpp  slam_graph.cpp  slam_graph.hpp
scavislam_lib/src/g2o_types/: anchored_points.cpp  anchored_points.h  register_types.cpp  register_types.h
scavislam_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
scavislam_ros/launch/: scavislam.launch
scavislam_ros/src/: ros_frame_grabber.hpp  stereo_slam.cpp
sophus/: Makefile  manifest.xml
sophus/sophus_src/: CMakeLists.txt
visiontools/: CMakeLists.txt  manifest.xml
visiontools/visiontools_src/: CMakeLists.txt
